# Servizio-di-calcolo-della-impronta-SHA-256-di-file-multipli

./: CMakeLists.txt  README.md  client.c  collector_client.c  run_tests.sh  server.c
